--- a/ProjectUAS_EzBooking_Client/src/administrator/FormDashboardAdministrator.form
+++ b/ProjectUAS_EzBooking_Client/src/administrator/FormDashboardAdministrator.form
@@ -87,6 +87,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="RESTAURANT"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRestaurantActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnExit">
           <Properties>
@@ -112,6 +115,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="CUSTOMER"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCustomerActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnAdministrator">
           <Properties>
@@ -123,6 +129,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="ADMINISTRATOR"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAdministratorActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="lblApplicationName">
           <Properties>
